--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -1,10 +1,11 @@
 /*
     Table of comments
 
-    480 - Small phones
-    767 - Small phones and tablets
-    1023 - Small tablets
     1200 - Big tablets
+    1023 - Small tablets
+    767 - Small phones and tablets
+    480 - Small phones
+    
 */
 
 /* --- 1200 --- */
@@ -79,14 +80,15 @@
      }
     .col { width: 95%; padding: 0 2.5%; }
     
-    .main-nav { display: none; }
+    .sticky .mobile-nav-icon { 
+        display: inline-block;
+    }
 
-    .mobile-nav-icon { display: inline-block; }
-
-    .main-nav { 
-        float: left;
-        margin-top: 30px;
-        margin-left: 25px;
+    .main-nav {
+        display: none;
+        width: 100%;
+        text-align: center;
+        z-index: 9999;
     }
 
     .main-nav li { display: block; }
@@ -104,7 +106,14 @@
         border: 0;
     }
 
-    .sticky .main-nav { margin-top: 10px; }
+    .sticky .main-nav li:first-child {
+        margin-top: 0;
+        padding-top: 0;
+    }
+
+    .sticky .main-nav { 
+        margin-top: 10px;
+    }
 
     .sticky .main-nav li a:link,
     .sticky .main-nav li a:visited { padding: 10px 0; }
