--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -37,7 +37,8 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: 4;
+    -webkit-box-sizing: 4;
+            box-sizing: 4;
 }
 
 *:focus {
@@ -174,6 +175,7 @@ a:link,
 a:active {
     color: #2ecc71;
     text-decoration: none;
+    -webkit-transition: color 0.2s;
     transition: color 0.2s;
 }
 
@@ -181,6 +183,7 @@ a:hover,
 a:active {
     color: #555;
     text-decoration: none;
+    -webkit-transition: color 0.2s;
     transition: color 0.2s;
 }
 
@@ -189,10 +192,10 @@ a:active {
 /* ------------------------------------------------- */
 
 header {
+    background: -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,0.7)), to(rgba(0,0,0,0.7))), url('img/hero.jpg');
     background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('img/hero.jpg');
     background-size: cover;
     background-position: center;
-    background-attachment: fixed;
     height: 100vh;
 }
 
@@ -201,7 +204,8 @@ header {
     width: 1140px;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
 }
 
 /* ---- LOGO ---- */
@@ -249,6 +253,7 @@ header {
 .main-nav li a:hover,
 .main-nav li a:active {
     border-bottom: 2px solid #2ecc71;
+    -webkit-transition: border-bottom 0.2s;
     transition: border-bottom 0.2s;
 }
 
@@ -261,7 +266,8 @@ header {
     width: 100%;
     z-index: 9999;
     background-color: rgba(255,255,255,0.95);
-    box-shadow: 0 2px 2px #aaa;
+    -webkit-box-shadow: 0 2px 2px #aaa;
+            box-shadow: 0 2px 2px #aaa;
 }
 
 .sticky .main-nav { margin-top: 15px; }
@@ -331,14 +337,22 @@ section {
     width: 100%;
     height: auto;
     opacity: 0.7;
-    transform: scale(1.15);
+    -webkit-transform: scale(1.15);
+            transform: scale(1.15);
+    -webkit-transition: opacity 0.5s, -webkit-transform 0.5s;
+    transition: opacity 0.5s, -webkit-transform 0.5s;
     transition: transform 0.5s, opacity 0.5s;
+    transition: transform 0.5s, opacity 0.5s, -webkit-transform 0.5s;
 }
 
 .meal-photo img:hover {
-    transform: scale(1.03);
+    -webkit-transform: scale(1.03);
+            transform: scale(1.03);
     opacity: 1.0;
+    -webkit-transition: opacity 0.5s, -webkit-transform 0.5s;
+    transition: opacity 0.5s, -webkit-transform 0.5s;
     transition: transform 0.5s, opacity 0.5s;
+    transition: transform 0.5s, opacity 0.5s, -webkit-transform 0.5s;
 }
 
 /* --- STEPS --- */
@@ -400,7 +414,8 @@ section {
     width: 100%;
     height: auto;
     margin-bottom: 15px;
-    box-shadow: 0 1.5px 15px rgb(180, 180, 180);
+    -webkit-box-shadow: 0 1.5px 15px rgb(180, 180, 180);
+            box-shadow: 0 1.5px 15px rgb(180, 180, 180);
 }
 
 .city-feature {
@@ -414,10 +429,10 @@ section {
 /* --- TESTIMONIALS --- */
 
 .section-testimonials {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.8)), to(rgba(0, 0, 0, 0.8))), url(img/testimonials.jpg);
     background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(img/testimonials.jpg);
     background-size: cover;
     color: #fff;
-    background-attachment: fixed;
 }
 
 blockquote {
@@ -461,7 +476,8 @@ cite img {
     border-radius: 15px;
     width: 90%;
     margin-left: 5%;
-    box-shadow: 0 1px 10px rgb(189, 189, 189);
+    -webkit-box-shadow: 0 1px 10px rgb(189, 189, 189);
+            box-shadow: 0 1px 10px rgb(189, 189, 189);
 }
 
 .plan-box span {
@@ -497,7 +513,8 @@ cite img {
     background-color: #fcfcfc;
     border-bottom-right-radius: 15px;
     border-bottom-left-radius: 15px;
-    align-content: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
 }
 
 .plan-price {
@@ -552,6 +569,7 @@ input[type=submit] {
     margin-top: 0px;
     margin-bottom: 20px;
     text-align: center;
+    -webkit-transition: background-color 0.2s, border-color 0.2s;
     transition: background-color 0.2s, border-color 0.2s;
 }
 
@@ -562,6 +580,7 @@ input[type=submit] {
     background-color: #2ecc71;
     border-color: #2ecc71;
     margin-right: 15px;
+    -webkit-transition: background-color 0.2s, border-color 0.2s;
     transition: background-color 0.2s, border-color 0.2s;
 }
 
@@ -570,6 +589,7 @@ input[type=submit] {
     border: 1px solid;
     border-color: #2ecc71;
     color: #2ecc71;
+    -webkit-transition: background-color 0.2s, border-color 0.2s, color 0.2s;
     transition: background-color 0.2s, border-color 0.2s, color 0.2s;
 }
 
@@ -579,6 +599,7 @@ input[type=submit]:hover {
     background-color: #229552;
     border-color: #229552;
     color: #fff;
+    -webkit-transition: background-color 0.2s, border-color 0.2s, color 0.2s;
     transition: background-color 0.2s, border-color 0.2s, color 0.2s;
 }
 
@@ -625,32 +646,38 @@ footer p {
     color: #888;
     border: 0;
     text-decoration: none;
+    -webkit-transition: color 0.2;
     transition: color 0.2;
 }
 
 .footer-nav a:hover,
 .footer-nav a:active {
+    -webkit-transition: color 0.2;
     transition: color 0.2;
     color: #ddd;
 }
 
 .ion-social-facebook:hover {
     color: #3b5999;
+    -webkit-transition: color 0.2;
     transition: color 0.2;
 }
 
 .ion-social-instagram:hover {
     color: #e4405f;
+    -webkit-transition: color 0.2;
     transition: color 0.2;
 }
 
 .ion-social-twitter:hover {
     color: #55acee;
+    -webkit-transition: color 0.2;
     transition: color 0.2;
 }
 
 .ion-social-googleplus:hover {
     color: #dd4b39;
+    -webkit-transition: color 0.2;
     transition: color 0.2;
 }
 
