--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -196,6 +196,7 @@ header {
     background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('img/hero.jpg');
     background-size: cover;
     background-position: center;
+    background-attachment: fixed;
     height: 100vh;
 }
 
@@ -433,6 +434,7 @@ section {
     background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(img/testimonials.jpg);
     background-size: cover;
     color: #fff;
+    background-attachment: fixed;
 }
 
 blockquote {
