--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -192,11 +192,13 @@ a:active {
 /* ------------------------------------------------- */
 
 header {
-    background: -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,0.7)), to(rgba(0,0,0,0.7))), url('img/hero.jpg');
+    /*background: -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,0.7)), to(rgba(0,0,0,0.7))), url('img/hero.jpg');
     background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('img/hero.jpg');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
+    height: 100vh;*/
+    background-image: url('img/hero.jpg');
     height: 100vh;
 }
 
