--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -434,7 +434,7 @@ section {
     background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(img/testimonials.jpg);
     background-size: cover;
     color: #fff;
-    background-attachment: fixed;
+    /*background-attachment: fixed;*/
 }
 
 blockquote {
